report/regression/bytes/test_results.txt
Compiler run failed:
Error (6275): Source "forge-std/Test.sol" not found: File not found. Searched the following locations: "/Users/konstantin.britikov/Documents/SMT/SolTG".
ParserError: Source "forge-std/Test.sol" not found: File not found. Searched the following locations: "/Users/konstantin.britikov/Documents/SMT/SolTG".
 --> test/Math.t.sol:3:1:
  |
3 | import "forge-std/Test.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (6275): Source "forge-std/Test.sol" not found: File not found. Searched the following locations: "/Users/konstantin.britikov/Documents/SMT/SolTG".
ParserError: Source "forge-std/Test.sol" not found: File not found. Searched the following locations: "/Users/konstantin.britikov/Documents/SMT/SolTG".
 --> test/bytes.t.sol:3:1:
  |
3 | import "forge-std/Test.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Unable to resolve imports:
      "forge-std/Test.sol" in "/Users/konstantin.britikov/Documents/SMT/SolTG/test/Math.t.sol"
      "forge-std/Test.sol" in "/Users/konstantin.britikov/Documents/SMT/SolTG/test/bytes.t.sol"
with remappings:
      
Compiling 4 files with Solc 0.8.25
Solc 0.8.25 finished in 19.12ms
Unable to resolve imports:
      "forge-std/Test.sol" in "/Users/konstantin.britikov/Documents/SMT/SolTG/test/bytes.t.sol"
      "forge-std/Test.sol" in "/Users/konstantin.britikov/Documents/SMT/SolTG/test/Math.t.sol"
with remappings:
      
Compiling 4 files with Solc 0.8.25
Solc 0.8.25 finished in 17.50ms
